# pyspark-data-processing

./: .dockerignore  .gitignore  README.md  config.yaml  docker-compose.yml  dockerfile  pyproject.toml  qa  requirements.txt  start.sh
data/add_to_carts/dt=2025-08-15/: part-00000.json
data/add_to_carts/dt=2025-08-16/: part-00000.json
data/clicks/dt=2025-08-15/: part-00000.json
data/clicks/dt=2025-08-16/: part-00000.json
data/impressions/dt=2025-08-15/: part-00000.json
data/previous_orders/: previous_orders.parquet
src/: main.py  pipeline.py  readers.py  schemas.py  transformers.py  utils.py
tests/: conftest.py  test_pipeline.py  test_schemas.py
